deploy/k8s/deployment/certificate.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager-standup-bot
