deploy/k8s/deployment/promtail.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail-daemonset
spec:
  selector:
    matchLabels:
      name: promtail
  template:
    metadata:
      labels:
        name: promtail
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: standup-api-logs
          hostPath:
            path: /var/log/standup/api
        - name: standup-notifier-logs
          hostPath:
            path: /var/log/standup/notifier
        - name: standup-queue-consumer-logs
          hostPath:
            path: /var/log/standup/queue-consumer
        - name: promtail-config
          configMap:
            name: promtail-configmap
      containers:
        - name: promtail
          image: grafana/promtail:2.3.0
          args:
            - -config.file=/etc/promtail/promtail.yaml
          volumeMounts:
            - name: standup-notifier-logs
              mountPath: /var/log/standup-notifier
            - name: standup-api-logs
              mountPath: /var/log/standup/api
            - name: standup-queue-consumer-logs
              mountPath: /var/log/queue-consumer/api
            - name: promtail-config
              mountPath: /etc/promtail
---
