deploy/k8s/deployment/queue-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue-consumer
  labels:
    app: queue-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queue-consumer
  template:
    metadata:
      labels:
        app: queue-consumer
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: queue-consumer
          image: registry.digitalocean.com/simple/standup-slack-bot:latest
          #imagePullPolicy: Never
          args: ["queue:consume", "--env=prod"]
          ports:
            - containerPort: 3000
