deploy/k8s/deployment/standup-notifier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: standup-notifier-deployment
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: standup-notifier
          image: standup-slack-bot:latest
          imagePullPolicy: Never
          args: ["standup:notify", "--env=prod"]
