deploy/k8s/deployment/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: standup-api
  labels:
    app: standup-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: standup-api
  template:
    metadata:
      labels:
        app: standup-api
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: standup-api
          image: registry.digitalocean.com/simple/standup-slack-bot:latest
          imagePullPolicy: Never
          args: ["server:run", "--port=3000", "--env=prod"]
          ports:
            - containerPort: 3000
          env: *appEnv
---
apiVersion: v1
kind: Service
metadata:
  name: standup-api-service
spec:
  selector:
    app: standup-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
