deploy/k8s/deployment/loki.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  labels:
    service: loki-service
spec:
  type: NodePort
  selector:
    component: loki
  ports:
    - port: 3100
      targetPort: 3100
