deploy/k8s/deployment/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      securityContext:
      #  runAsUser: 1000
      #  runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: postgres
          image: postgres:13.4-alpine
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: postgresql-data
              readOnly: false
          ports:
            - containerPort: 5432
      volumes:
        - name: postgresql-data
          hostPath:
            path: "/var/lib/postgresql/data"
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  #type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      #nodePort: 30000
---
#apiVersion: v1
#kind: ConfigMap
#metadata:
#  name: postgres-configmap
#data:
#  service: postgres
