deploy/k8s/deployment/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: standup-ui
  labels:
    app: standup-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: standup-ui
  template:
    metadata:
      labels:
        app: standup-ui
    spec:
      #securityContext:
      #  runAsUser: 1000
      #  runAsGroup: 1000
      #  fsGroup: 1000
      #volumes:
      #  - name: standup-ui-log
      #    hostPath:
      #      path: "/var/log/standup-ui"
      containers:
        - name: standup-ui
          image: registry.digitalocean.com/simple/standup-slack-bot-ui:latest
          imagePullPolicy: Never
          # TODO nginx log volumeMounts:
          #  - name: standup-ui-log
          #    mountPath: /var/log
          #    readOnly: false
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: standup-ui-service
spec:
  selector:
    app: standup-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
