deploy/k8s/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-ingress
spec:
  tls:
    - hosts:
        - grafana.botenza.com
      secretName: grafana-cert-secret
  rules:
      - host: grafana.botenza.com
        http:
          paths:
            - path: /
              pathType: "Prefix"
              backend:
                service:
                  name: grafana-service
                  port:
                    number: 3000
